--- a/proj/core/templates/core/index.html
+++ b/proj/core/templates/core/index.html
@@ -47,6 +47,7 @@
 	<nav class="one-page-header navbar navbar-default navbar-fixed-animate homeapp-header" data-role="navigation" style="height:100px;background-color: rgba(0,0,0,0.4);margin-bottom: 0px;box-shadow:none;">
 		<div class="container">
 			<div class="menu-container page-scroll">
+				<img style="height: 100px;width: 100px;top: -20px;position: relative;" src="{% static 'assets/img/logo.png' %}"/>
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
 					<span class="sr-only">Toggle navigation</span>
 					<span class="icon-bar"></span>
