--- a/proj/core/templates/core/index.html
+++ b/proj/core/templates/core/index.html
@@ -46,7 +46,7 @@
 	<!-- Header -->
 	<nav class="one-page-header navbar navbar-default navbar-fixed-animate homeapp-header" data-role="navigation" style="height:100px;background-color: rgba(0,0,0,0.4);margin-bottom: 0px;box-shadow:none;">
 		<div class="container">
-			<div class="menu-container page-scroll">
+			<div class="menu-container page-scroll" style="width: 110px;margin-right: 0px;padding-right: 0px;margin: 0px;float: left;">
 				<img style="height: 100px;width: 100px;top: -20px;position: relative;" src="{% static 'assets/img/logo.png' %}"/>
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
 					<span class="sr-only">Toggle navigation</span>
